重新提交build目录

--- a/protobuf/CMakeLists.txt
+++ b/protobuf/CMakeLists.txt
@@ -5,16 +5,16 @@ project(prototest)
 file(GLOB c_files *.c *.cpp *.cc)
 
 set(ABSEIL_ROOT "C:/Program Files (x86)/protobuf")
-set(utf8_range_DIR "E:/CProgram/protobuf-32.0/build/third_party/utf8_range")
+set(gRPC_DIR "C:/Program Files (x86)/grpc")
 list(APPEND CMAKE_PREFIX_PATH ${ABSEIL_ROOT})
-list(APPEND CMAKE_PREFIX_PATH ${utf8_range_DIR})
+list(APPEND CMAKE_PREFIX_PATH ${gRPC_DIR})
 
 include_directories(E:/CProgram/protobuf-32.0/_deps/absl-src)
 include_directories(E:/CProgram/protobuf-32.0/src)
  
-find_package(Protobuf CONFIG REQUIRED)
-find_package(utf8_range CONFIG REQUIRED)
+find_package(protobuf CONFIG REQUIRED)
 find_package(gRPC CONFIG REQUIRED)
+find_package(utf8_range CONFIG REQUIRED)
 # find_package(utf8_validity  ${utf8_range_DIR}/utf8_validity.a)
 
 # set(UTF8RANGE_LIBRARY utf8_range::utf8_validity utf8_range::utf8_range)
@@ -56,8 +56,11 @@ set(ABSEL_LIBARARY
     absl::utility
     absl::variant
   )
-
-add_executable(prototest ${c_files})
 set(grpc++ "C:/Program Files (x86)/grpc/lib/libgrpc++_unsecure.a")
-target_link_libraries(prototest ${grpc++} gRPC::grpc Protobuf::libprotobuf ${ABSEL_LIBARARY} pthread utf8_range::utf8_range utf8_range::utf8_validity)
+
+add_executable(prototest main.cpp test.grpc.pb.cc test.pb.cc)
+target_link_libraries(prototest ${grpc++} gRPC::grpc protobuf::libprotobuf ${ABSEL_LIBARARY} utf8_range::utf8_range utf8_range::utf8_validity)
+
+add_executable(client client.cpp test.grpc.pb.cc test.pb.cc)
+target_link_libraries(client ${grpc++} gRPC::grpc protobuf::libprotobuf ${ABSEL_LIBARARY} utf8_range::utf8_range utf8_range::utf8_validity)
 
